Add email contact to footer in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,7 @@
   <!-- Footer -->
   <footer>
     <p>©2025 Firmamently</p>
+    <p>firmamently5@gmail.com</p>
   </footer>
 
   <!-- JavaScript -->
